Wed Feb 19 17:47:01 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (ip_s_getaddress): Don't access freed memory.

Wed Feb 19 11:39:41 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: it must see rb_cv_broken_memmem not rb_cv_func_memmem.

Tue Feb 18 23:18:41 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/socket/test_socket.rb: unix socket is required by test case.

Tue Feb 18 20:48:38 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/socket/test_addrinfo.rb: remove unused variables.
	* test/socket/test_nonblock.rb: ditto.
	* test/socket/test_socket.rb: ditto.
	* test/socket/test_unix.rb: ditto.
	* test/testunit/test_parallel.rb: ditto.
	* test/webrick/test_filehandler.rb: ditto.
	* test/xmlrpc/test_features.rb: ditto.
	* test/zlib/test_zlib.rb: ditto.

Tue Feb 18 14:27:18 2014  Shota Fukumori  <her@sorah.jp>

	* lib/test/unit.rb: Requires minitest < 5.0.0 if Gem is available.

Tue Feb 18 14:24:07 2014  Shota Fukumori  <her@sorah.jp>

	* lib/test/unit/test-unit.gemspec: Add minitest < 5.0.0 dependency

	* tool/rbinstall.rb: Add empty implementations for `add_dependency`,
	  `add_runtime_dependency`, `add_development_dependency` for
	  Gem::Specification.

Tue Feb 18 12:06:39 2014  Tanaka Akira  <akr@fsij.org>

	* configure.in (FILE_COUNT): Removed.  (win32.c defines it in itself.)
	  (FILE_READPTR): Ditto.

Tue Feb 18 09:35:44 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test/psych/test_string.rb: remove unused variables.
	* test/test/psych/test_yaml.rb: ditto.

Mon Feb 17 21:31:31 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb: ignore warning messages for running with -w
	  option such as chkbuild.

Mon Feb 17 20:00:27 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h: Move BDIGIT and related definitions from
	  include/ruby/defines.h.

Mon Feb 17 17:41:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (marshal_dump, marshal_load): do not recycle wrapper