@@ -1,3 +1,7 @@
+Wed Feb 19 18:31:48 2014  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket: Wrap struct addrinfo by struct rb_addrinfo.
+
 Wed Feb 19 17:47:01 2014  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/ipsocket.c (ip_s_getaddress): Don't access freed memory.
